Better demo endpoint added
